@@ -51,6 +51,12 @@
 			<version>2.2.0.RELEASE</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.querydsl</groupId>
+			<artifactId>querydsl-mongodb</artifactId>
+			<version>4.2.1</version>
+		</dependency>
+
 		<!-- dev tools -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -161,17 +167,12 @@
 			<artifactId>spring-security-taglibs</artifactId>
 		</dependency>
 	</dependencies>
+
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<!-- <configuration> <jvmArguments> -Xms1024m -Xmx8096m -XX:PermSize=128M 
-					-XX:MaxPermSize=1024M -Xnoclassgc -XX:NewSize=512M -XX:MaxNewSize=1024M -XX:+UseParNewGC 
-					-XX:ParallelGCThreads=4 -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=50 
-					-XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintHeapAtGC -XX:+AggressiveOpts 
-					-Djava.net.preferIPv4Stack=true -Djava.awt.headless=true" </jvmArguments> 
-					</configuration> -->
 			</plugin>
 
 			<!-- QueryDSL -->
@@ -181,6 +182,7 @@
 				<version>1.1.3</version>
 				<executions>
 					<execution>
+						<id>jpa-processor</id>
 						<goals>
 							<goal>process</goal>
 						</goals>
@@ -189,6 +191,18 @@
 							<processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
 						</configuration>
 					</execution>
+					
+					<execution>
+						<id>mongodb-processor</id>
+						<goals>
+							<goal>process</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>target/generated-sources/java</outputDirectory>
+							<processor>org.springframework.data.mongodb.repository.support.MongoAnnotationProcessor</processor>
+						</configuration>
+					</execution>
+					
 				</executions>
 			</plugin>
 		</plugins>
